--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<main>
 
 		<section class="chat">
-			<h2 class="chat__title">Мужской чат &nbsp; (без регистрации)</h2>
+			<h2 class="chat__title">МУЖСКОЙ ЧАТ &nbsp; (без регистрации)</h2>
 
 			<div class="chatbox">
 				<div class="messagespane">
