--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</div>
 				<div class="userspane"></div>
 				<input class="chat__input">
-				<button class="chat__submit-button" type="submit" aria-label="кнопка отправки" onclick={submit}>Ввод</button>
+				<button class="chat__submit-button" type="submit" aria-label="кнопка отправки" onclick={submit}>Послать</button>
 			</div>
 
 		</section>
