--- a/index.html
+++ b/index.html
@@ -22,6 +22,29 @@
 		</form>
 	</section-->
 
+
+	<!--
+		function handleSubmit(event) {
+			event.preventDefault();
+      props.onSubmit(userName, userText);
+			focus();
+		}
+	-->
+
+<section class="login">
+
+	<form class="login__form">
+		<h2 class="login__form-title">Вход</h2>
+		<input class="login__form-input" type="name" placeholder=" Введите ник /не более 20 символов/" required>
+		<!-- выбор цвета или авто -->
+		<input class="login__form-input" placeholder=" Введите пароль /для зарегистрированных ников/" type="password">
+		<input class="login__form-input" placeholder=" Введите адрес почты" type="email" required>
+		<button class="form__submit-button" type="submit" aria-label="кнопка отправки" onClick={submit}>Войти</button>
+		<p class="form__text">Вы можете зарегистрироваться, тогда Ваши настройки гарантированно сохранятся.</p>
+	</form>
+
+</section>
+
 	<main>
 
 		<section class="chat">
@@ -32,8 +55,11 @@
 					<p class="chat__message">**** Welcome **** !</p>
 				</div>
 				<div class="userspane"></div>
-				<input class="chat__input">
-				<button class="chat__submit-button" type="submit" aria-label="кнопка отправки" onclick={submit}>Послать</button>
+				<form class="chat__form">
+					<label class="chat__username" onClick={handleChangeName}>{userName}</label>
+					<input class="chat__input" type="text" name="userText" value={userText} onChange={handleChangeValue} autoComplete="on" autoFocus>
+					<button class="chat__submit-button" type="submit" aria-label="кнопка отправки"	onclick={handleSubmit}>Послать</button>
+				</form>
 			</div>
 
 		</section>
@@ -67,19 +93,5 @@
 	</div>
 
 </footer>
-
-<section class="login">
-
-	<form class="login__form">
-		<h2 class="login__form-title">Вход</h2>
-		<input class="login__form-input" type="name" placeholder=" Введите ник /не более 20 символов/" required>
-		<!-- выбор цвета или авто -->
-		<input class="login__form-input" placeholder=" Введите пароль /для зарегистрированных ников/" type="password">
-		<input class="login__form-input" placeholder=" Введите адрес почты" type="email" required>
-		<button class="form__submit-button" type="submit" aria-label="кнопка отправки" onClick={submit}>Войти</button>
-		<p class="form__text">Вы можете зарегистрироваться, тогда Ваши настройки гарантированно сохранятся.</p>
-	</form>
-
-</section>
 
 </html>
