--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 		<h2 class="login__form-title">Вход</h2>
 		<input class="login__form-input" type="name" placeholder=" Введите ник /не более 20 символов/" required>
 		<!-- выбор цвета или авто -->
+		<input class="login__form-input" placeholder=" Введите адрес почты" type="email">
 		<input class="login__form-input" placeholder=" Введите пароль /для зарегистрированных ников/" type="password">
-		<input class="login__form-input" placeholder=" Введите адрес почты" type="email" required>
 		<button class="form__submit-button" type="submit" aria-label="кнопка отправки" onClick={submit}>Войти</button>
 		<p class="form__text">Вы можете зарегистрироваться, тогда Ваши настройки гарантированно сохранятся.</p>
 	</form>
