--- a/index.html
+++ b/index.html
@@ -48,21 +48,29 @@
 	<main>
 
 		<section class="chat">
-			<h2 class="chat__title">МУЖСКОЙ ЧАТ &nbsp; (без регистрации)</h2>
+			<h2 class="chat__title">МУЖСКОЙ ЧАТ &nbsp; <span class="chat__title-gray">(без регистрации)</span></h2>
 
 			<div class="chat__box">
 
 				<div class="chat__messages-pane">
+					<div class="chat__cell-time"></div>
 					<div class="chat__cell chat__wmessage">**** Welcome **** !</div>
+					<div class="chat__cell-time"></div>
 					<div class="chat__cell"></div>
+					<div class="chat__cell-time"></div>
 					<div class="chat__cell"></div>
+					<div class="chat__cell-time"></div>
 					<div class="chat__cell"></div>
 				</div>
 
 				<div class="chat__users-pane">
+					<div class="chat__cell-time"></div>
 					<div class="chat__cell"></div>
+					<div class="chat__cell-time"></div>
 					<div class="chat__cell"></div>
+					<div class="chat__cell-time"></div>
 					<div class="chat__cell"></div>
+					<div class="chat__cell-time"></div>
 					<div class="chat__cell"></div>
 				</div>
 
