--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
 
 <body class="page">
 
-	<header>
-		<div class="header__logo"></div>
-	</header>
-
 	<!--section class="admin-login">
 		<form class="admin-login__form">
 			<h2 class="admin-login__form-title">Вход администратора</h2>
@@ -45,17 +41,25 @@
 
 	</section>
 
-	<main>
+	<main class="main">
+
+		<section class="header">
+			<div class="header__logo"></div>
+			<div class="header__button"></div>
+		</section>
 
 		<section class="chat">
-			<h2 class="chat__title">МУЖСКОЙ ЧАТ &nbsp; <span class="chat__title-gray">(без регистрации)</span></h2>
+
+			<h2 class="chat__title">МУЖСКОЙ ЧАТ &nbsp;
+				<span class="chat__title-gray">(без регистрации)</span>
+			</h2>
 
 			<div class="chat__box">
 
 				<div class="chat__messages-pane">
 					<div class="chat__cell-time"></div>
 					<div class="chat__cell chat__wmessage">**** Welcome **** !</div>
-					<div class="chat__cell-time"></div>
+					<div class="chat__cell-time">10.05.23</div>
 					<div class="chat__cell"></div>
 					<div class="chat__cell-time"></div>
 					<div class="chat__cell"></div>
@@ -86,15 +90,14 @@
 
 		</section>
 
+		<section class="photoGallery">
+			<h2 class="photoGallery__title">Фотогалерея</h2>
+		</section>
+
+		<div class="sideMenu">
+		</div>
+
 	</main>
-
-	<div class="table">
-
-	</div>
-
-	<section class="photo-gallery">
-
-	</section>
 
 </body>
 
